--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile group: 'guru.nidi', name: 'graphviz-java-all-j2v8', version: '0.14.1'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
     compile group: 'io.vavr', name: 'vavr', version: '0.10.2'
+    compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
 }
